<resources>
    <string name="app_name">EU</string>

    <!-- Strings related to login -->
    <string name="phone">Enter Phone Number</string>
    <string name="otp">Enter OTP</string>
    <string name="sendOTP">Send OTP</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">Profile Activity</string>
    <string name="submit">Submit</string>
    <string name="submit_profile">Submit</string>
    <string name="choose">Choose</string>
    <string name="provider">Provider-This user will be giving the books</string>
    <string name="receiver">Receiver- This user will be receiving the books</string>
    <string name="fname"> First Name</string>
    <string name="lname"> Last Name</string>
    <string name="phone_number">Phone Number:</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="skip_to_main_page"><u>Skip to main page >></u>.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_email">Enter your Email</string>
    <string name="update_profile">Update Profile</string>


    <string-array name="Board">
        <item>State</item>
        <item>CBSE</item>
        <item>ICSE</item>

    </string-array>

    <string-array name="Year">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
    </string-array>

    <string-array name="School">
        <item>SVIS</item>
        <item>DSRV</item>
        <item>Don Bosco</item>
        <item>Children's Academy</item>
        <item>St. Joseph</item>
    </string-array>

    <string-array name="status">
        <item>Pending</item>
        <item>Accepted</item>
        <item>Rejected</item>
    </string-array>

    <string-array name="subject">
        <item>Maths</item>
        <item>English</item>
        <item>Science</item>
    </string-array>

    <string-array name="sort">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Board</item>
        <item>Standard</item>
    </string-array>


    <string-array name="gender">
        <item>Mr.</item>
        <item>Ms.</item>
    </string-array>

    <string-array name="city">
        <item>Select City</item>
        <item>Mumbai</item>
        <item>Ahemdabad</item>
        <item>Delhi</item>
        <item>Kolkata</item>
        <item>Chennai</item>
    </string-array>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_requests">My Requests</string>
    <string name="title_profile">Profile</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="search">Search</string>
    <string name="title_activity_provider_home">ProviderHomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fcf_Preference" >fcf_Preference</string>


</resources>
