<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/layout_no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_no_internet"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_rss_feed_white_100dp" />

        <TextView
            android:id="@+id/tv_no_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_no_internet"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="Oops! No internet. Please refresh your network and try again"
            android:textAlignment="center"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="40dp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="30dp"
            app:cardElevation="50dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ic_phone_white_24dp"
                        android:backgroundTint="@android:color/black" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_Layout_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <EditText
                            android:id="@+id/et_PhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <com.example.hp.eu.custom.TextViewUbuntuRegular
                    android:id="@+id/tv_SendOtp"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_rectangle"
                    android:gravity="center"
                    android:onClick="send_sms"
                    android:text="@string/sendOTP"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_lock"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ic_lock_outline_white_24dp"
                        android:backgroundTint="@android:color/black"
                        android:visibility="gone" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_Otp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/otp"
                            android:inputType="numberPassword"
                            android:maxLength="6"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:visibility="gone" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <com.example.hp.eu.custom.TextViewUbuntuRegular
                    android:id="@+id/verify_textview"
                    style="?android:textAppearanceSmall"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_rectangle"
                    android:gravity="center"
                    android:onClick="verify"
                    android:text="@string/submit"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/cbremember_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Remember Me" />

             <!--   <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.example.hp.eu.custom.TextViewUbuntuRegular
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account?"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                    <com.example.hp.eu.custom.TextViewUbuntuRegular
                        android:id="@+id/register_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="Register"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>-->
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </ScrollView>
</LinearLayout>
