<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="100dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinner_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center_horizontal"
                            android:entries="@array/gender"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="5dp"
                                app:srcCompat="@drawable/ic_person_black_24dp" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_Layout_Name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/et_Fname"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:hint="@string/fname"
                                    android:maxLines="1"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_Layout_Name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/et_Lname"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:hint="@string/lname"
                                    android:maxLines="1"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/ic_phone_white_24dp"
                                android:backgroundTint="@android:color/black" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_layout_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_PhoneNumber"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:enabled="false"
                                    android:hint="Enter Phone Number"
                                    android:inputType="number"
                                    android:maxLength="10"
                                    android:maxLines="1"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/ic_email_black_24dp" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_Layout_Email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_Email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/hint_email"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/ic_lock_outline_white_24dp"
                                android:backgroundTint="@android:color/black" />


                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_Layout_Password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_Password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:hint="@string/enter_password"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/ic_lock_outline_white_24dp"
                                android:backgroundTint="@android:color/black" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_Layout_Confirm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_ConfirmPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:hint="@string/confirm_password"
                                    android:inputType="textPassword" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_requirements"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/ic_location_on_black_24dp"
                                android:backgroundTint="@android:color/black" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_Layout_Address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_Address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:hint=" Address (Eg. Mumbai, India)"
                                    android:inputType="text" />

                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <com.example.hp.eu.custom.TextViewUbuntuRegular
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="5dp"
                            android:text="Select Your City"
                            android:backgroundTint="@android:color/black" />

                        <Spinner
                            android:id="@+id/spinner_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:entries="@array/city"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Do you wish to Receive or Upload?" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <RadioButton
                                    android:id="@+id/Rb_receive"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/receiver" />

                                <RadioButton
                                    android:id="@+id/Rb_upload"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/provider" />
                            </RadioGroup>
                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_Layout_Income"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:visibility="gone" >

                            <EditText
                                android:id="@+id/et_income"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:hint=" Enter Income"
                                android:inputType="number"/>

                        </android.support.design.widget.TextInputLayout>

                        <com.example.hp.eu.custom.TextViewUbuntuRegular
                            android:id="@+id/tv_Submit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/rounded_rectangle"
                            android:gravity="center"
                            android:paddingBottom="15dp"
                            android:paddingTop="15dp"
                            android:text="@string/submit_profile"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>


    </RelativeLayout>

    <com.example.hp.eu.custom.CircularImageView
        android:id="@+id/imageview_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_person_black_100dp" />

</RelativeLayout>